--- a/frontend/.env
+++ b/frontend/.env
@@ -1,7 +1,7 @@
-VITE_MESSAGE_API = http://localhost:4000/messages
-VITE_USER_API = http://localhost:4000/users
-VITE_CONSUMER_API = http://localhost:4000/consumers
-VITE_FINANCE_API = http://localhost:4000/finance
-VITE_TRANSACTION_API = http://localhost:4000/transactions
-VITE_IMAGE_API = http://localhost:4000/images/
-VITE_POST_API = http://localhost:4000/posts
+VITE_MESSAGE_API = https://lagnah.up.railway.app/messages
+VITE_USER_API = https://lagnah.up.railway.app/users
+VITE_CONSUMER_API = https://lagnah.up.railway.app/consumers
+VITE_FINANCE_API = https://lagnah.up.railway.app/finance
+VITE_TRANSACTION_API = https://lagnah.up.railway.app/transactions
+VITE_IMAGE_API = https://lagnah.up.railway.app/images/
+VITE_POST_API = https://lagnah.up.railway.app/posts
